--- a/movie-app/css/style.css
+++ b/movie-app/css/style.css
@@ -18,8 +18,9 @@
     background-color: var(--bg-color);
 }
 
-.navbar .navbar-brand {
+.navbar .navbar-brand, .navbar .navbar-brand:hover {
     color: var(--secondary-color);
+    cursor: pointer;
 }
 
 #banner {
@@ -30,6 +31,15 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+#subnav {
+    background-color: var(--bg-color);
+    padding: 1rem;
+}
+
+#subnav button {
+    margin-left: 10px;
 }
 
 #search-movie {
@@ -127,6 +137,13 @@ span.r {
     color: var(--secondary-color);
 }
 
+.fa-heart {
+    font-size: 1.5rem;
+    color: var(--bg-color);
+    text-align: end;
+    padding: 0.5rem;
+}
+
 @media (max-width: 750px) {
     .mb-info {
         width: 80%;
@@ -150,5 +167,9 @@ span.r {
         margin: 0 auto;
         margin-top: 20px;
         width: 95%;
+    }
+
+    #subnav {
+        text-align: center;
     }
 }
